# toon_rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXISTING_TOON_RUST_STRUCTURE.md  FEATURE_PARITY.md  INTEGRATION_GUIDE.md  PLAN_TO_PORT_TOON_RUST_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/cli/: conversion.rs  json_stream.rs  json_stringify.rs  mod.rs
src/decode/: mod.rs
tests/: decode_fixtures.rs  json_stream.rs
